<resources>
    <string name="app_name">FingerPrintIOT</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign up</string>
    <string name="login_text">welcome back! login to access the app.</string>
    <string name="sign_up_text">Create an account to access all features.</string>
    <string name="reset_password_text"><u>Reset Password</u></string>
    <string name="fullname">full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <string name="send_email">Send Email</string>
    <string name="device_name">device name</string>
    <string name="add_device">add device</string>
    <string name="device_type">device type</string>
    <string name="exist_device">exist device</string>
    <string name="new_device">new device</string>
    <string name="device_key">device key</string>
    <string name="logout">logout</string>
    <string name="username">username</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="device_phone">device phone</string>
    <string name="user_id">user id</string>

</resources>
