<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true"
    android:background="@color/colorPrimary"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Activities.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/login_sign_up_padding">

<!--        <TextView-->
<!--            android:id="@+id/back_sign_up"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:drawableStart="@drawable/ic_keyboard_arrow_left_black_24dp"-->
<!--            android:text="@string/register_text"-->
<!--            style="@style/headerStyle"-->
<!--            />-->

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_sign_up_edit_text_margin_top"
            android:textColorHint="@color/colorAccent"
            app:hintTextAppearance="@style/TextLabel" >

            <EditText
                android:id="@+id/sign_up_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                style="@style/editTextStyle"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_sign_up_edit_text_margin_top"
            android:textColorHint="@color/colorAccent"
            app:hintTextAppearance="@style/TextLabel" >

            <EditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                style="@style/editTextStyle"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_sign_up_edit_text_margin_top"
            android:textColorHint="@color/colorAccent"
            app:hintTextAppearance="@style/TextLabel">

            <EditText
                android:id="@+id/sign_up_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                style="@style/editTextStyle"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_sign_up_edit_text_margin_top"
            android:textColorHint="@color/colorAccent"
            app:hintTextAppearance="@style/TextLabel">

            <EditText
                android:id="@+id/sign_up_confirm_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirm_password"
                android:inputType="textPassword"
                style="@style/editTextStyle"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/sign_up_btn"
            android:layout_width="@dimen/login_sign_up_button_layout_width"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            style="@style/buttonStyle"
            />

    </LinearLayout>

</ScrollView>